...
            }
            .sheet(item: $viewModel.selectedAlarm) { alarm in
                EditAlarmView(alarms: $viewModel.alarmManager.alarms, alarm: alarm, notificationDelegate: viewModel.notificationDelegate)
            }
            .alert(isPresented: $viewModel.showingAlarmAlert) {
                Alert(
                    title: Text("Alarm"),
                    message: Text("Time to wake up!"),
                    primaryButton: .default(Text("Snooze")) {
                        if let alarmID = viewModel.activeAlarmID, let alarm = viewModel.alarmManager.alarms.first(where: { $0.id.uuidString == alarmID }) {
                            viewModel.snoozeAlarm(alarm: alarm)
                        }
                        viewModel.activeAlarmID = nil
                    },
                    secondaryButton: .cancel()
...
